objects/ccrz__E_FeaturedProduct__c.object
<CustomObject>
    <description>Products to display in the Featured Product section of the Home Page</description>
    <fields>
        <fullName>ccrz__DescriptionRT__c</fullName>
        <label>DescriptionRT</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__Description__c</fullName>
        <description>Enter in a short, 255 character max, description that will display next to the product image for product spotlight and featured product.</description>
        <inlineHelpText>Enter in a short, 255 character max, description that will display next to the product image for product spotlight and featured product.</inlineHelpText>
        <label>Promotion Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not this featured product is enabled for the storefront</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__FeaturedProductId__c</fullName>
        <externalId>true</externalId>
        <label>Featured Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <description>Product that is being featured</description>
        <label>Product Item</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Featured Products</relationshipLabel>
        <relationshipName>Featured_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <defaultValue>500</defaultValue>
        <description>Ordering of the featured products displayed on the site</description>
        <inlineHelpText>Enter a value</inlineHelpText>
        <label>Sequence</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <description>One or more storefronts that the featured product should be displayed on.</description>
        <label>Storefront</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DefaultStore</fullName>
                </value>
                <value>
                    <fullName>PurinaMills</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Type__c</fullName>
        <description>Featured or Spotlight - Spotlight are more prominent whereas featured is more grid-like display</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Featured</fullName>
                </value>
                <value>
                    <fullName>Spotlight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CC Featured Product</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__Product__c</columns>
        <columns>ccrz__Type__c</columns>
        <columns>ccrz__Enabled__c</columns>
        <columns>ccrz__Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Featured Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Featured Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>